jspm. Package manager for the SystemJS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Modules!</title>
 </head>
 <body>
-  <script src="bundle.js"></script>
+  <script src="jspm_packages/system.js"></script>
+  <script src="config.js"></script>
+  <!--<script src="bundle.js"></script>-->
+  <script>
+    System.import("src/entry.js");
+  </script>
 </body>
 </html>
